# tailr

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/protocol/: Cargo.toml
crates/protocol/src/: types.rs
crates/search-engine/: Cargo.toml
crates/search-engine/src/: detector.rs  filter.rs  grep.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  lib.rs  static_files.rs  upgrade.rs  ws.rs
crates/tail-engine/: Cargo.toml
crates/tail-engine/src/: index.rs  lib.rs  session.rs  watcher.rs
docs/: cli-refactor-plan.md  config-file-plan.md  log-level-config-plan.md  release-guide.md
docs/design/: log-level-config.md
docs/feat/settings-dialog/: prototype.html
docs/feat/v0.7.0/: log-row-color-system.html  prototype.html  prototype_v2.html
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: check-i18n.mjs
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: BookmarkPanel.vue  FileBrowser.vue  FileTreeNode.vue  FilterBar.vue  LogPanel.vue  LogViewer.vue  SearchPanel.vue  SelectionToolbar.vue  SettingsDialog.vue  SettingsPanel.vue  TabBar.vue  ToastContainer.vue  TokenDialog.vue
frontend/src/components/settings/: AboutSection.vue  ColorPicker.vue  LogLevelSettings.vue
frontend/src/composables/: useAuth.ts  useBookmarks.ts  useClipboard.ts  useFavoriteFiles.ts  useHistoricalFilter.ts  useLogLevels.ts  useLogStream.ts  useRecentFiles.ts  useSearch.ts  useTabs.ts  useToast.ts  useUpdateNotifier.ts
frontend/src/locales/: en-US.json  index.ts  zh-CN.json
frontend/src/services/: api.ts  websocket.ts
frontend/src/utils/: filter.ts
scripts/: demo-gif-setup.sh
src/: config.rs  daemon.rs  main.rs
uiux/: log-viewer.html
