[package]
name = "tailr"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "tailr"
path = "src/main.rs"

[dependencies]
tailr-server = { path = "crates/server" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }

[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/tail-engine",
    "crates/search-engine",
    "crates/server",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
notify = "6"
memmap2 = "0.9"
