[package]
name = "tailr"
version = "0.9.5"
edition = "2021"

[[bin]]
name = "tailr"
path = "src/main.rs"

[dependencies]
tailr-server = { path = "crates/server" }
tailr-protocol = { path = "crates/protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
daemonize = "0.5"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { workspace = true }
arc-swap = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/tail-engine",
    "crates/search-engine",
    "crates/server",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
notify = "6"
memmap2 = "0.9"
