[package]
name = "tailr-server"
version = "0.3.1"
edition = "2021"

[dependencies]
tailr-protocol = { path = "../protocol" }
tailr-tail-engine = { path = "../tail-engine" }
tailr-search-engine = { path = "../search-engine" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
