[package]
name = "tailr-server"
version = "0.10.2"
edition = "2021"

[dependencies]
tailr-protocol = { path = "../protocol" }
tailr-tail-engine = { path = "../tail-engine" }
tailr-search-engine = { path = "../search-engine" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip"] }
# Force flate2 to use the pure-Rust miniz_oxide backend instead of the default
# system zlib. tower-http's compression-gzip pulls flate2; flate2's default
# links libz.so.1 which would break tailr's "zero user-side install" promise
# on minimal alpine/distroless/scratch containers. miniz_oxide is statically
# compiled in — no runtime library dependency. Same rationale as using rustls
# instead of OpenSSL elsewhere.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Pure-Rust per-IP rate limiting (governor underneath). GovernorLayer
# extracts TCP peer IP from axum's ConnectInfo<SocketAddr> extension, which
# requires `into_make_service_with_connect_info::<SocketAddr>()` on the
# `axum::serve(...)` call site (see src/main.rs).
# Pinned to 0.5.x: the last release line compatible with axum 0.7.
# 0.6+ requires axum 0.8.
tower_governor = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
arc-swap = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
include_dir = "0.7"
mime_guess = "2"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

[dev-dependencies]
tempfile = "3"
