[package]
name = "tailr-tail-engine"
version = "0.1.3"
edition = "2021"

[dependencies]
tailr-protocol = { path = "../protocol" }
tailr-search-engine = { path = "../search-engine" }
tokio = { workspace = true }
notify = { workspace = true }
arc-swap = "1"
memmap2 = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
